# universal-code-template-generators-api

./: README.md  design_doc.md  pyproject.toml
github/workflows/: ci.yml
src/template_service/: api.py  domain.py  main.py
src/template_service/generators/: __init__.py  base.py  cpp.py  java.py  javascript.py  python.py
tests/: conftest.py  test_generators.py
